@@ -1,3 +1,7 @@
+Mon Nov  6 14:24:34 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* vers_ts.c: Remove ctime define.  It is just asking for trouble.
+
 Mon Nov  6 11:58:26 1995  Karl Fogel  <kfogel@floss.cyclic.com>
 
         * vers_ts.c: ifdef ctime, undef it before redefining it.  It is a
